--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 * linguist-vendored
 *.pas linguist-vendored=false
+*.dpr linguist-language=pascal
+*.pas linguist-language=pascal
+*.dproj linguist-language=pascal
